<resources>
    <string name="app_name">EMS</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="enter_credentails">Please enter your credentials</string>
    <string name="login">Login</string>
    <string name="signUp">New? Sign Up Now</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="studentTV">Students \n Mishra Anand Sudhir 1819/VSCE/11649</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="todo">TODO</string>
</resources>