<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="20dp"
                android:src="@drawable/ems"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:fontFamily="@font/alata"
            android:textColor="#F44336"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:hint="Mobile Number"
            app:helperText="India"
            app:counterTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:prefixText="+91"
            app:prefixTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/black"
                android:inputType="number"
                android:maxLines="10"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            android:hint="Password"
            app:helperText="Alphanumeric"
            app:counterTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:prefixTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@color/black"
                android:inputType="textPassword"
                android:maxLines="10"/>

        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:id="@+id/loginLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="#F44336"
                android:fontFamily="@font/alata"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:text="@string/login"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/black"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="20dp"
            android:background="#36000000"
            app:layout_constraintTop_toBottomOf="@id/loginLL"/>
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signUp"
            android:textColor="#673AB7"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/signUpBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/smartphone"
            app:layout_constraintTop_toBottomOf="@id/signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
